
  [ Jeff Lane ]
  * scripts/virtualization: script no longer fails when trying to cast an
    empty timeout setting in config file to int(). Added additional error
    handling. (LP: #1186259)

  [ Brendan Donegan ]
  * jobs/optical.txt.in - Added VERIFICATION section for cdrom-write job so that
    the Qt UI doesn't barf when it finds there is no such section (LP: #1185759)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:42 +0100

checkbox (0.16.3) saucy; urgency=low

  [ Sylvain Pineau ]
  * jobs/info.txt.in, scripts/efi_resource: parse the kern.log backups too.
  * scripts/gpu_test, jobs/suspend.txt.in: Call firefox instead of the default
    browser.

  [ Daniel Manrique ]
  * Expanded optical_drive resource command so it correctly handles systems
    with no optical drive (LP: #1182489)
  * Added missing plugin files to po/POTFILES.in so their strings are
    translatable (LP: #1183271)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:37 +0100

checkbox (0.16.2) saucy; urgency=low

  [ Alberto Milone ]
  * scripts/graphics_stress_test, scripts/rotation_test: make sure to
    always reset the "screen" variable. Somehow the NVIDIA driver manages
    to make it unusable after the first time. (LP: #1172667)

  [ Brendan Donegan ]
  * checkbox/parsers/submission.py - publish kernel-release information to
    interested parties.

  [ Daniel Manrique ]
  * Ensured that button strings from the "continue" dialog are translatable
    (LP: #1176695) 
  
  [ Jeff Lane ]
  * checkbox/parsers/cpuinfo.py - split on first instance of ':' in cpuinfo
    output lines to avoid splitting into more than 2 items. Also fixed a pep8
    issue discovered while working on this. (LP: #1180496)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Tue, 07 May 2013 19:21:05 +0100

checkbox (0.16.1) saucy; urgency=low

  [ Jeff Lane ]
  * scripts/cpu_offlining: Modified script to no longer offline cpu0 to resolve