@@ -8,6 +8,9 @@ checkbox (0.16.4) saucy; urgency=low
   [ Brendan Donegan ]
   * jobs/optical.txt.in - Added VERIFICATION section for cdrom-write job so that
     the Qt UI doesn't barf when it finds there is no such section (LP: #1185759)
+  * qt/frontend/qtfront.cpp, qtfront.h, checkbox_qt/qt_interface.py: Select
+    appropriate radio button in showTest if the test already has a result set
+    rather than just defaulting to skip always (LP: #1181952)
 
  -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:42 +0100
 
